[gd_scene load_steps=2 format=2]

[ext_resource path="res://widgets/HealthPointsTrackerBuilder.gd" type="Script" id=1]

[node name="HealthPointsTrackerBuilder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 799.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" type="HBoxContainer" parent="VBox"]
margin_right = 799.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/HBox1"]
margin_top = 13.0
margin_right = 397.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "Feature Name"
valign = 1

[node name="LineEdit" type="LineEdit" parent="VBox/HBox1"]
margin_left = 401.0
margin_right = 799.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 64.0
margin_right = 799.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/HBox2"]
margin_right = 397.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Minimum Health"
valign = 1

[node name="Minimum" type="SpinBox" parent="VBox/HBox2"]
margin_left = 401.0
margin_right = 799.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="HBox3" type="HBoxContainer" parent="VBox"]
margin_top = 148.0
margin_right = 799.0
margin_bottom = 228.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/HBox3"]
margin_top = 23.0
margin_right = 397.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "Maximum Health"
valign = 1

[node name="Maximum" type="SpinBox" parent="VBox/HBox3"]
margin_left = 401.0
margin_right = 799.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
